fix bug connected with conf file tooltip invisibility

--- a/sources/zafira-web/angular/client/styles/layout/test-run-card.scss
+++ b/sources/zafira-web/angular/client/styles/layout/test-run-card.scss
@@ -298,6 +298,7 @@
         display: flex;
         align-items: center;
         margin-right: 10px;
+        z-index: 2;
         &-wrapper {
             display: flex;
             align-items: center;
